# qt-flatpak-demo

./: CMakeLists.txt  assets.qrc  flatpak-demo-app.kdev4  flatpakdemo.cpp  flatpakdemo.h  main.cpp  org.flatpak.demo.appdata.xml  org.flatpak.demo.desktop  org.flatpak.demo.json  org.flatpak.qtdemo.appdata.xml  org.flatpak.qtdemo.desktop  org.flatpak.qtdemo.json  org.kde.flatpak-demo.appdata.xml  org.kde.flatpak-demo.desktop  org.kde.flatpak-demo.json  resources.qrc
icons/: CMakeLists.txt
qml/: BaseButton.qml  ButtonMenu.qml  DemoPage.qml  MainButton.qml  MainMenu.qml  MainPage.qml  MenuButton.qml  main.qml
